{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 46,
  "lineage": "c35ba61c-3142-cc91-e905-cd279fb0b383",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:security-group/sg-0adacff683e8ec4dc",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0adacff683e8ec4dc",
            "ingress": [],
            "name": "moz-health-uat20230609035150801900000011",
            "name_prefix": "moz-health-uat",
            "owner_id": "680148267093",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "moz-health-uat-eks_cluster_sg",
              "kubernetes.io/cluster/moz-health-uat": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "moz-health-uat-eks_cluster_sg",
              "kubernetes.io/cluster/moz-health-uat": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4d7e9de3aeb9e9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:security-group/sg-0e05eb00bf2c86e13",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0e05eb00bf2c86e13",
            "ingress": [],
            "name": "moz-health-uat20230609035150781500000010",
            "name_prefix": "moz-health-uat",
            "owner_id": "680148267093",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "moz-health-uat-eks_worker_sg",
              "kubernetes.io/cluster/moz-health-uat": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "moz-health-uat-eks_worker_sg",
              "kubernetes.io/cluster/moz-health-uat": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4d7e9de3aeb9e9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1482379595",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0adacff683e8ec4dc",
            "security_group_rule_id": "sgr-07eb5dc900bdd2d8e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-65829394",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0adacff683e8ec4dc",
            "security_group_rule_id": "sgr-012ee27d411825c8b",
            "self": false,
            "source_security_group_id": "sg-0e05eb00bf2c86e13",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_primary_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_private_access_cidrs_source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_private_access_sg_source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2216178636",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e05eb00bf2c86e13",
            "security_group_rule_id": "sgr-0c019c4bb5db91939",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3994576454",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e05eb00bf2c86e13",
            "security_group_rule_id": "sgr-0d0aeeda2224b26bf",
            "self": false,
            "source_security_group_id": "sg-0adacff683e8ec4dc",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-321072621",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e05eb00bf2c86e13",
            "security_group_rule_id": "sgr-035d083e692a31679",
            "self": false,
            "source_security_group_id": "sg-0adacff683e8ec4dc",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-761082758",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e05eb00bf2c86e13",
            "security_group_rule_id": "sgr-08eb309c3d26b6f7b",
            "self": false,
            "source_security_group_id": "sg-0e05eb00bf2c86e13",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8bf009e631c9f81",
            "domain": "vpc",
            "id": "eipalloc-0d8bf009e631c9f81",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-234-234-242.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.234.242",
            "public_ipv4_pool": "amazon",
            "tags": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "eip-moz-health-uat",
              "kubernetes.io/cluster/moz-health-uat": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "eip-moz-health-uat",
              "kubernetes.io/cluster/moz-health-uat": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:internet-gateway/igw-05b1320ff1efb577b",
            "id": "igw-05b1320ff1efb577b",
            "owner_id": "680148267093",
            "tags": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "moz-health-uat",
              "kubernetes.io/cluster/moz-health-uat": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "moz-health-uat",
              "kubernetes.io/cluster/moz-health-uat": "shared"
            },
            "vpc_id": "vpc-0c4d7e9de3aeb9e9d"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8bf009e631c9f81",
            "association_id": "eipassoc-0e374ff4bce075e38",
            "connectivity_type": "public",
            "id": "nat-082076f2e2ae25c37",
            "network_interface_id": "eni-02fe8dcf645d58df1",
            "private_ip": "192.168.6.214",
            "public_ip": "13.234.234.242",
            "subnet_id": "subnet-09d5e08677611a225",
            "tags": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "nat-gw-moz-health-uat",
              "kubernetes.io/cluster/moz-health-uat": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "nat-gw-moz-health-uat",
              "kubernetes.io/cluster/moz-health-uat": "shared"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:route-table/rtb-0bd636522b152ea60",
            "id": "rtb-0bd636522b152ea60",
            "owner_id": "680148267093",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-082076f2e2ae25c37",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "private-moz-health-uat-rtb",
              "kubernetes.io/cluster/moz-health-uat": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "private-moz-health-uat-rtb",
              "kubernetes.io/cluster/moz-health-uat": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4d7e9de3aeb9e9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:route-table/rtb-0ae4d5c98ab8886f5",
            "id": "rtb-0ae4d5c98ab8886f5",
            "owner_id": "680148267093",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b1320ff1efb577b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "public-moz-health-uat-rtb",
              "kubernetes.io/cluster/moz-health-uat": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "public-moz-health-uat-rtb",
              "kubernetes.io/cluster/moz-health-uat": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4d7e9de3aeb9e9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0244210669d0f8c27",
            "route_table_id": "rtb-0bd636522b152ea60",
            "subnet_id": "subnet-0e8f21714864827c6"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd2223127eb37257",
            "route_table_id": "rtb-0bd636522b152ea60",
            "subnet_id": "subnet-09be870c85407a918"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1710dc4ec9746ff",
            "route_table_id": "rtb-0ae4d5c98ab8886f5",
            "subnet_id": "subnet-09d5e08677611a225"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c31980e41aba3caa",
            "route_table_id": "rtb-0ae4d5c98ab8886f5",
            "subnet_id": "subnet-05e286a5db28698be"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:security-group/sg-0206df2b8418e52fb",
            "description": "Master nodes security group",
            "egress": [],
            "id": "sg-0206df2b8418e52fb",
            "ingress": [],
            "name": "masters-moz-health-uat",
            "name_prefix": "",
            "owner_id": "680148267093",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "masters-moz-health-uat",
              "kubernetes.io/cluster/moz-health-uat": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "masters-moz-health-uat",
              "kubernetes.io/cluster/moz-health-uat": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4d7e9de3aeb9e9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:security-group/sg-03ed27600a30836e2",
            "description": "RDS Database security group",
            "egress": [],
            "id": "sg-03ed27600a30836e2",
            "ingress": [],
            "name": "db-moz-health-uat",
            "name_prefix": "",
            "owner_id": "680148267093",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-moz-health-uat"
            },
            "tags_all": {
              "Name": "db-moz-health-uat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4d7e9de3aeb9e9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:security-group/sg-0b788c587bc913b4e",
            "description": "Security group for all worker nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b788c587bc913b4e",
            "ingress": [],
            "name": "nodes-moz-health-uat",
            "name_prefix": "",
            "owner_id": "680148267093",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "nodes-moz-health-uat",
              "kubernetes.io/cluster/moz-health-uat": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "nodes-moz-health-uat",
              "kubernetes.io/cluster/moz-health-uat": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4d7e9de3aeb9e9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_nodes_egress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow outbound traffic to worker nodes",
            "from_port": 10250,
            "id": "sgrule-646298655",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0206df2b8418e52fb",
            "security_group_rule_id": "sgr-014cdcb87162a23ad",
            "self": false,
            "source_security_group_id": "sg-0b788c587bc913b4e",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.master_nodes_sg",
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_nodes_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with cluster API server",
            "from_port": 443,
            "id": "sgrule-3693331435",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0206df2b8418e52fb",
            "security_group_rule_id": "sgr-0a221a871be14e2ea",
            "self": false,
            "source_security_group_id": "sg-0b788c587bc913b4e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.master_nodes_sg",
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_db_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with RDS database",
            "from_port": 5432,
            "id": "sgrule-2273574830",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03ed27600a30836e2",
            "security_group_rule_id": "sgr-01e63cfe6b8a4aff2",
            "self": false,
            "source_security_group_id": "sg-0b788c587bc913b4e",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.rds_db_sg",
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_nodes_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-3445545138",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b788c587bc913b4e",
            "security_group_rule_id": "sgr-0f30448d10d4e0775",
            "self": false,
            "source_security_group_id": "sg-0206df2b8418e52fb",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.master_nodes_sg",
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_nodes_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3124411288",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b788c587bc913b4e",
            "security_group_rule_id": "sgr-0d65c8a0c4f3526fb",
            "self": false,
            "source_security_group_id": "sg-0b788c587bc913b4e",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:subnet/subnet-0e8f21714864827c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8f21714864827c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680148267093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "ap-south-1b-moz-health-uat",
              "SubnetType": "Private",
              "kubernetes.io/cluster/moz-health-uat": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "ap-south-1b-moz-health-uat",
              "SubnetType": "Private",
              "kubernetes.io/cluster/moz-health-uat": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c4d7e9de3aeb9e9d"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:subnet/subnet-09be870c85407a918",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09be870c85407a918",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680148267093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "ap-south-1a-moz-health-uat",
              "SubnetType": "Private",
              "kubernetes.io/cluster/moz-health-uat": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "ap-south-1a-moz-health-uat",
              "SubnetType": "Private",
              "kubernetes.io/cluster/moz-health-uat": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c4d7e9de3aeb9e9d"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:subnet/subnet-09d5e08677611a225",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d5e08677611a225",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680148267093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "utility-ap-south-1b-moz-health-uat",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/moz-health-uat": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "utility-ap-south-1b-moz-health-uat",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/moz-health-uat": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c4d7e9de3aeb9e9d"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:subnet/subnet-05e286a5db28698be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e286a5db28698be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680148267093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "utility-ap-south-1a-moz-health-uat",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/moz-health-uat": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-uat",
              "Name": "utility-ap-south-1a-moz-health-uat",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/moz-health-uat": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c4d7e9de3aeb9e9d"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:vpc/vpc-0c4d7e9de3aeb9e9d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-014c8b8f84fc72409",
            "default_route_table_id": "rtb-0b9db6c2be3583891",
            "default_security_group_id": "sg-0d5cc24fb9056c684",
            "dhcp_options_id": "dopt-5e994435",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c4d7e9de3aeb9e9d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b9db6c2be3583891",
            "owner_id": "680148267093",
            "tags": {
              "Name": "moz-health-uat",
              "kubernetes.io/cluster/moz-health-uat": "shared"
            },
            "tags_all": {
              "Name": "moz-health-uat",
              "kubernetes.io/cluster/moz-health-uat": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}